--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@headlessui/react": "^2.1.5",
+        "@heroicons/react": "^2.1.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -10,7 +12,9 @@
         "@types/node": "^16.11.56",
         "@types/react": "^18.0.18",
         "@types/react-dom": "^18.0.6",
-        "axios": "^0.21.0",
+        "axios": "^0.21.4",
+        "dotenv": "^16.4.5",
+        "heroicons": "^2.1.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.2.1",
@@ -42,5 +46,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.4.10"
     }
 }
