--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "helmet": "^5.1.0",
         "mongoose": "^8.6.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "npm-run-all": "^4.1.5",
         "supertokens-node": "latest",
         "ts-node-dev": "^2.0.0",
@@ -23,6 +24,7 @@
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.12",
         "@types/node": "^16.11.38",
         "nodemon": "^2.0.16"
     },
