--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^18.0.6",
         "axios": "^0.21.4",
         "dotenv": "^16.4.5",
+        "firebase": "^10.13.1",
         "heroicons": "^2.1.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
