--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "heroicons": "^2.1.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-responsive-masonry": "^2.3.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.1",
         "supertokens-auth-react": "latest",
@@ -49,6 +50,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-responsive-masonry": "^2.1.3",
         "tailwindcss": "^3.4.10"
     }
 }
