--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "main": "index.js",
     "scripts": {
         "start": "npx ts-node-dev --project ./tsconfig.json ./index.ts",
-        "build": "tsc"
+        "build": "react-scripts build"
     },
     "dependencies": {
         "cors": "^2.8.5",
