more env keys added

--- a/backend/example.env
+++ b/backend/example.env
@@ -5,3 +5,7 @@ CLIENT_ID= ""
 CLIENT_SECRET= ""
 CONNECTIONURI= ""
 APIKEY= ""
+REACT_APP_API_PORT=
+REACT_APP_API_URL=
+REACT_APP_WEBSITE_PORT=
+REACT_APP_WEBSITE_URL=
