--- a/frontend/example.env
+++ b/frontend/example.env
@@ -7,3 +7,5 @@ REACT_APP_STORAGEBUCKET= ""
 REACT_APP_MESSAGINGSENDERID= ""
 REACT_APP_APPID= ""
 REACT_APP_MEASUREMENTID= ""
+REACT_APP_WEBSITE_URL=
+REACT_APP_API_URL=
