--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,28 @@
 {
-    "name": "supertokens-node",
-    "version": "0.0.1",
-    "private": true,
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "npx ts-node-dev --project ./tsconfig.json ./index.ts",
-        "build": "react-scripts build"
-    },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.18.1",
-        "helmet": "^5.1.0",
-        "mongoose": "^8.6.1",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "npm-run-all": "^4.1.5",
-        "supertokens-node": "latest",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^4.7.2"
-    },
-    "devDependencies": {
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.17",
-        "@types/morgan": "^1.9.3",
-        "@types/multer": "^1.4.12",
-        "@types/node": "^16.11.38",
-        "nodemon": "^2.0.16"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {"start": "ts-node-dev --project ./tsconfig.json ./index.ts"},
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.6.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "npm-run-all": "^4.1.5",
+    "supertokens-node": "^20.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.5.4",
+    "nodemon": "^3.1.4"
+  }
 }
